# lolbot

./: chess.sln  dotnet.exe_20251207_222215.etlx  dotnet.exe_20251207_222215.nettrace  gen-pgo.ps1  pgo.nettrace  readme.md  slopfish-gpt-codex.sln  test-uci.ps1  test.ps1  test_results.db
Chess.Api/: Chess.Api.csproj  Chess.Api.http  Engine.cs  PgnReader.cs  Program.cs  Utils.cs  appsettings.json  test_results.db
Chess.Benchmarks/: Chess.Benchmarks.csproj  Program.cs
Chess.Tests/: Checks.cs  Chess.Tests.csproj  Chess.Tests.sln  EnPassant.cs  Evaluations.cs  Fen.cs  Fuzz.cs  HashTable.cs  Moves.cs  Perft.cs  Pgn.cs  Positions.cs  RepititionTable.cs  Search.cs  Squares.cs  Tactics.cs  TestSuites.cs  Utils.cs  inconsistent positions.md  mvvlva.cs
Lolbot.Benchmarks/: LmrBenchmark.cs  Program.cs
Lolbot.Engine.Tests/: AccumulatorTests.cs  BinarySerializationTests.cs  EnPassant.cs  Evaluations.cs  Fen.cs  FenRoundtripAndStalemate.cs  GlobalUsings.cs  HashFuzz.cs  HashTable.cs  Lmr.cs  Lolbot.Engine.Tests.csproj  MovePicker.cs  MovePickerOrdering.cs  Pgn.cs  (+11 more)
nnue/: 0_pre_process.py  1_train.py  2_finetune.py  3_quantize.py  4_test_inference.py  data.py  good.pth  model_information.py  nnue_eval.py  nnue_eval_cp.py  nnue_weights_best.pth  nnue_weights_final.pth  nnue_weights_phase_1_-_material_wdl.pth  nnue_weights_phase_2_-_accurate_wdl.pth  nnue_weights_trained.pth  nnue_weights_training_wdl.pth  parse_dataset.py  preprocess_data.py  pyproject.toml  test_nnue_eval.py  train.py  train_nnue_proper.py
nnue/Lolbot.Nnue/: Lolbot.Nnue.csproj  PgnReader.cs  Program.cs
(+124 files in other folders)
